6043.	[bug]		The key file IO locks objects would never get
			deleted from the hashtable due to off-by-one error.
			[GL #3727]

6042.	[bug]		ANY responses could sometimes have the wrong TTL.
			[GL #3613]

6041.	[func]		Set the RLIMIT_NOFILE to rlim_max returned from
			getrlimit() instead of trying to guess the maximum
			allowed value. [GL #3676]

6040.	[bug]		Speed up the named shutdown time by explicitly
			canceling all recursing ns_client objects for
			each ns_clientmgr. [GL #3183]

6039.	[bug]		Removing a catalog zone from catalog-zones without
			also removing the referenced zone could leave a
			dangling pointer. [GL #3683]

6038.	[placeholder]

6037.	[func]		Reject zones which have DS records not at delegation
			points. [GL #3697]

6036.	[bug]		nslookup and host were not honoring the selected port
			in TCP mode. [GL #3721]

6035.	[bug]		Refactor the dns_resolver unit to store the fetch
			contexts and zone counter directly in the hash
			tables without buckets and implement effective
			cleaning of both objects. [GL #3709]

6034.	[func]		Deprecate alt-transfer-source, alt-transfer-source-v6
			and use-alt-transfer-source. [GL #3694]

6033.	[func]		Log messages related to serve-stale now include the RR
			type involved. [GL !7145]

6032.	[bug]		After change 5995, zone transfers were using a small
			compression context that only had space for the first
			few dozen names in each message. They now use a large
			compression context with enough space for every name.
			[GL #3706]

6031.	[bug]		Move the "final reference detached" log message
			from dns_zone unit to the DEBUG(1) log level.
			[GL #3707]

6030.	[bug]		Refactor the ADB to use a global LRU queue, store
			the ADB names and ADB entries directly in the hash
			tables instead of buckets, and properly clean the
			ADB names and entries when not in use. [GL #3239]
			[GL #3238] [GL #2615] [GL #2078] [GL #2437]
			[GL #3312] [GL #2441]
